# ProyectoFinalDjango

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  db.sqbpro  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt  yaml.yaml
.github/actions/setup/: action.yml
.github/workflows/: pr-checks.yml
app/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_delete_cliente.py  0003_producto_autor.py  0004_comentario.py  0005_comentario_producto.py
core/: asgi.py  settings.py  urls.py  views.py  wsgi.py
core/settings/: base.py  collectstatic.py  dev.py  prod.py
entorno/: pyvenv.cfg
entorno/Scripts/: activate  activate.bat
scripts/: entrypoint.sh
static/css/: style.css
static/images/: Formula1
static/js/: main.js
templates/: agregar_comentario.html  borrar_producto.html  buscar_producto.html  clientes_list.html  crear_producto.html  error_403.html  index.html  login.html  logout.html  modifcar_producto.html  nosotros.html  padre.html  producto_detalle.html  productos_list.html  registro.html  resultado_buscar_producto.html
